[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-canister-log = "0.2.0"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
ic-cdk = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
time = "0.3"