[package]
name = "etching"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bincode = "1.3.3"
bitcoin = { version = "0.32.5", features = ["rand"] }
bitcoincore-rpc-json = { version = "0.19.0", default-features = false }
candid = "0.10"
chrono = { version = "0.4.19", default-features = false }
hex = "0.4.3"
ic-canister-log = "0.2.0"
ic-canisters-http-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-03-06_23-01+p2p" }
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.6"
ic-stable-structures = "0.6"
base64 = {version = "0.22"}
lazy_static = "1.4"
ordinals = "0.0.14"
runes-indexer-interface = { path = "../interface" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1"
time = "0.3"
ciborium = "0.2.1"
rand = "0.8.5"
ic-ic00-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-crypto-getrandom-for-wasm = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
serde_bytes = "0.11.15"
ripemd = "0.1.1"
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "9b239d1d67253eb14a35be6061e3967d5ec9db9d" }
bech32 = "0.9.0"
bs58 = "0.4.0"
num-traits = "0.2.14"
ic-crypto-extended-bip32 = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
icrc-ledger-client-cdk = { git = "https://github.com/dfinity/ic", tag = "release-2024-01-18_23-01" }
common = {path = "../common"}